--- a/game.css
+++ b/game.css
@@ -106,3 +106,11 @@ header > h1 {
     background: white;
     border: 6px solid black;
 }
+
+.green-glow {
+    border: 6px solid green;
+}
+
+.red-glow {
+    border: 6px solid red;
+}
